# crypto-llm-analyst

./: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.sh  start.sh
ai/: __init__.py  langchain_agent.py  mcp_tools.py  rag_system.py
api/: __init__.py  main.py
config/: __init__.py  logging.py  settings.py
data/: __init__.py  bitquery_stream.py  data_processor.py
database/: __init__.py  alembic.ini  init.sql  models.py
database/migrations/: 001_initial.py  README.md
docs/: README.md
examples/: demo.py  run_api.py  run_web.py
monitoring/: prometheus.yml
n8n-workflows/: btc_analysis.json
src/crypto_llm_analyst/: __init__.py  main.py
src/crypto_llm_analyst/api/: __init__.py
src/crypto_llm_analyst/data_sources/: __init__.py
src/crypto_llm_analyst/database/: __init__.py
src/crypto_llm_analyst/llm/: __init__.py
src/crypto_llm_analyst/mcp/: __init__.py
src/crypto_llm_analyst/rag/: __init__.py
src/crypto_llm_analyst/web/: __init__.py
src/crypto_llm_analyst/workflows/: __init__.py
tests/: conftest.py  test_basic.py  test_data_processor.py  test_mcp_tools.py
