[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-llm-analyst"
version = "0.1.0"
description = "LLM-Powered Applications for OHLC Data Analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "arvin", email = "arvin@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "supabase>=2.0.0",
    "gql>=3.4.1",
    "websockets>=12.0",
    "asyncio-mqtt>=0.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/arvinmoj/crypto-llm-analyst"
Repository = "https://github.com/arvinmoj/crypto-llm-analyst"
Issues = "https://github.com/arvinmoj/crypto-llm-analyst/issues"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S113"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"